[package]
name = "package-rust"
version = "0.1.0"
authors = ["QuintenDV"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.64", features = ["derive"] }
serde_json = "1.0.64"
crossbeam-channel = "0.5.0"
thiserror = "1.0.24"